# aiostipy-cli

./: LICENSE  Makefile  README.md  pyproject.toml
aiostipy_cli/: main.py
src/: main.py
tests/: test_controller.py  test_module.py  test_new_app.py  test_resource.py  test_service.py
